<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application -->
    <string name="app_name">Inventory App</string>
    <string name="error">No data to update</string>

    <!-- Label for overflow menu option that inserts fake product data into the app -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title text for the empty view -->
    <string name="empty_view_title_text">There is no Product &#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product -->
    <string name="empty_view_subtitle_text">Add Product by click on the \"+\"  button below</string>

    <!-- Title for the activity to add a new product -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor -->
    <string name="action_save">Save</string>
    <string name="error_empty_entry">Error:\nEvery Fields Is Mandatory.. Don\'t leave field without entry.</string>
    <!-- Label for editor overflow menu option that deletes the current product -->
    <string name="action_delete">Delete</string>

    <string name="send_email">this is body for the email that send to the supplier</string>

    <!-- Toast message in editor when new product has been successfully inserted -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted -->
    <string name="editor_insert_product_failed">Error with saving Product</string>

    <!-- Toast message in editor when current product was successfully updated -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated -->
    <string name="editor_update_product_failed">Error with updating Product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted -->
    <string name="editor_delete_product_failed">Error with deleting Product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product -->
    <string name="delete_dialog_msg">Delete this Product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product -->
    <string name="cancel">Cancel</string>

    <!-- Label for Name category of attributes in the editor -->
    <string name="category_name">Name:</string>

    <!-- Label for Picture in the editor -->
    <string name="category_picture">Picture:</string>

    <!-- Label for Quantity in the editor -->
    <string name="category_quantity">Quantity:</string>

    <!-- Label for Price in the editor  -->
    <string name="category_price">Price:</string>

    <string name="category_supplier">Supplier:</string>

    <!-- Text hint for name field in the editor -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for quantity field in the editor -->
    <string name="hint_quantity">Quantity</string>

    <!-- Text hint for price field in the editor -->
    <string name="hint_price">Price</string>

    <string name="hint_supplier_name">Supplier Name</string>

    <string name="hint_supplier_email">Supplier Email</string>

    <!-- Units for price of the product (Dollar $) -->
    <string name="unit_price">$</string>

</resources>
