<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for a single list item in the list -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">
        <!-- name -->
        <LinearLayout
            android:id="@+id/container_name_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_name" />


            <!-- Name field -->
            <TextView
                android:id="@+id/text_name_list"
                style="@style/EditorFieldStyle"
                android:textStyle="bold"
                tools:text="@string/hint_product_name" />

        </LinearLayout>

        <!-- quantity -->
        <LinearLayout
            android:id="@+id/container_quantity_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <!-- Quantity field -->
            <TextView
                android:id="@+id/text_quantity_list"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                tools:text="@string/hint_quantity" />

        </LinearLayout>


        <!-- Price -->
        <LinearLayout
            android:id="@+id/container_price_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_price"
                style="@style/CategoryStyle"
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:text="@string/category_price" />

            <TextView
                android:id="@+id/text_price_list"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                tools:text="@string/hint_price" />

            <TextView
                android:id="@+id/label_units"
                style="@style/EditorUnitsStyle"
                android:text=" $"
                android:textColor="@color/editorColorPrimary" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/sale_product_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_cart"
        android:focusable="false" />
</LinearLayout>