<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the detail -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/image_detail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        tools:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_weight="2"
        android:orientation="vertical">
        <!-- Name category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_name" />


            <!-- Name field -->
            <TextView
                android:id="@+id/text_name"
                style="@style/EditorFieldStyle"
                tools:text="@string/hint_product_name" />

        </LinearLayout>

        <!-- Quantity category -->
        <LinearLayout
            android:id="@+id/container_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_quantity"
                style="@style/CategoryStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/category_quantity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/decrement_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_dec"
                    android:onClick="decrement" />

                <TextView
                    android:id="@+id/text_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0"
                    tools:text="30" />

                <ImageButton
                    android:id="@+id/increment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_inc"
                    android:onClick="increment" />
            </LinearLayout>
        </LinearLayout>
        <!-- Price category -->
        <LinearLayout
            android:id="@+id/container_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_price"
                style="@style/CategoryStyle"
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:text="@string/category_price" />

            <TextView
                android:id="@+id/text_price"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                tools:text="30" />

            <TextView
                android:id="@+id/label_units"
                style="@style/EditorUnitsStyle"
                android:text=" $"
                android:textColor="@color/editorColorPrimary" />
        </LinearLayout>

        <!-- supplier category -->
        <LinearLayout
            android:id="@+id/container_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_supplier"
                style="@style/CategoryStyle"
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:text="@string/category_supplier" />

            <TextView
                android:id="@+id/text_supplier_name"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_marginRight="@dimen/activity_margin"
                tools:text="Supplier Name" />

            <ImageButton
                android:id="@+id/supplier_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_contact_mail" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>